RecognizeWithManyTypes test fixed for old java